Resolves: fdo#81641 the new style shouldn't be a conditional style

regression from

commit 715d79bcc59d68c77dc84a1038998dd873df92e9
Author: Cédric Bosdonnat <cedric.bosdonnat@free.fr>
Date:   Fri Nov 30 11:51:46 2012 +0100

    Styles & Formatting: added SFXSTYLEBIT_ALL_VISIBLE and show hidden styles

commit 2fd9c2bf9af0c50dae3af3dbe5e22965ccdb4ae7
Author: Cédric Bosdonnat <cedric.bosdonnat@free.fr>
Date:   Sun Nov 25 15:24:42 2012 +0100

    Allow to hide styles in the "Styles & Formating" dialog

    In its current state, the feature only hides the styles. Things to sort
    out are:
     + Add some automatic filter to show hidden styles
     + Make the visibility persist in the file format

Change-Id: I7244d424765db0d5ed3aeaf380a8e1af56aa7eaf